# objdetect

./: .gitignore  README.md  example.ipynb  example_test.py  example_train.py  pdoc.sh  pyproject.toml  setup.cfg  simple_code.py
html/: anchors.html  aug.html  data.html  draw.html  grid.html  inv_grid.html  loop.html  losses.html  metrics.html  models.html  plot.html  post.html  transforms.html  utils.html
implementations/: README.md  backbones.py  data.py  eval.py  model_fcos.py  model_simple.py  model_yolo3.py  train.py
objdetect/: __init__.py  anchors.py  aug.py  datasets.py  grid.py  loop.py  metrics.py  models.py  nms.py  plot.py
src/: example.ipynb  example_fcos.py  example_simple.py  example_test.py  example_train.py  example_yolo3.py  fcos.py  test_aug.py  train_coco.py
src/implementations/: model_fcos.py  train.py
src/objdetect/: __init__.py  anchors.py  aug.py  data.py  datasets.py  draw.py  grid.py  inv_grid.py  loop.py  losses.py  metrics.py  models.py  plot.py  post.py  transforms.py  utils.py
