[metadata]
name = objdetect
version = 0.2.2
author = Ricardo Cruz
author_email = rpcruz@fe.up.pt
description = Lightweight and versatile one-stage object detection framework.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/rpmcruz/objdetect
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
